--- a/resources/cssLess/_variables.less
+++ b/resources/cssLess/_variables.less
@@ -1,9 +1,9 @@
 @resourcePath: "../";
-@color-normal: #595959;
-@color-purple: #590059;
-@color-green: #005900;
-@color-brown: #592d00;
-@color-blue: #005959;
-@color-red: #590000;
-@color-silver: #595959;
-@color-gold: #594900;
+@color-normal: #1a1a1a;
+@color-purple: #660066;
+@color-green: #006600;
+@color-brown: #663300;
+@color-blue: #004466;
+@color-red: #660000;
+@color-silver: #666666;
+@color-gold: #666600;
