changed and fixed some stuff

--- a/resources/cssLess/styles.less
+++ b/resources/cssLess/styles.less
@@ -128,7 +128,8 @@ option {
 	> .GearType { width: 90px; }
 	> .Stars { width: 20px; }
 	> .ItemUse { width: 145px; }
-	> .ItemOther { width: 100px; }
+	> .ItemOre { width: 100px; }
+	> .ItemMaterial { width: 170px; }
 	> .ItemRarity { width: 52px; }
 	> .ChestRarity { width: 46px; }
 	> .GoalType { width: 20px; }
