--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -136,8 +136,11 @@ option {
 .inputBox > .ItemUse {
   width: 145px;
 }
-.inputBox > .ItemOther {
+.inputBox > .ItemOre {
   width: 100px;
+}
+.inputBox > .ItemMaterial {
+  width: 170px;
 }
 .inputBox > .ItemRarity {
   width: 52px;
@@ -266,157 +269,6 @@ option {
 }
 .media.bg-gold {
   background: #666600;
-}
-.col-xs-1,
-.col-sm-1,
-.col-md-1,
-.col-lg-1,
-.col-xs-2,
-.col-sm-2,
-.col-md-2,
-.col-lg-2,
-.col-xs-3,
-.col-sm-3,
-.col-md-3,
-.col-lg-3,
-.col-xs-4,
-.col-sm-4,
-.col-md-4,
-.col-lg-4,
-.col-xs-5,
-.col-sm-5,
-.col-md-5,
-.col-lg-5,
-.col-xs-6,
-.col-sm-6,
-.col-md-6,
-.col-lg-6,
-.col-xs-7,
-.col-sm-7,
-.col-md-7,
-.col-lg-7,
-.col-xs-8,
-.col-sm-8,
-.col-md-8,
-.col-lg-8,
-.col-xs-9,
-.col-sm-9,
-.col-md-9,
-.col-lg-9,
-.col-xs-10,
-.col-sm-10,
-.col-md-10,
-.col-lg-10,
-.col-xs-11,
-.col-sm-11,
-.col-md-11,
-.col-lg-11,
-.col-xs-12,
-.col-sm-12,
-.col-md-12,
-.col-lg-12 {
-  padding-right: 5px;
-  padding-left: 5px;
-}
-.col-xs-1:first-child,
-.col-sm-1:first-child,
-.col-md-1:first-child,
-.col-lg-1:first-child,
-.col-xs-2:first-child,
-.col-sm-2:first-child,
-.col-md-2:first-child,
-.col-lg-2:first-child,
-.col-xs-3:first-child,
-.col-sm-3:first-child,
-.col-md-3:first-child,
-.col-lg-3:first-child,
-.col-xs-4:first-child,
-.col-sm-4:first-child,
-.col-md-4:first-child,
-.col-lg-4:first-child,
-.col-xs-5:first-child,
-.col-sm-5:first-child,
-.col-md-5:first-child,
-.col-lg-5:first-child,
-.col-xs-6:first-child,
-.col-sm-6:first-child,
-.col-md-6:first-child,
-.col-lg-6:first-child,
-.col-xs-7:first-child,
-.col-sm-7:first-child,
-.col-md-7:first-child,
-.col-lg-7:first-child,
-.col-xs-8:first-child,
-.col-sm-8:first-child,
-.col-md-8:first-child,
-.col-lg-8:first-child,
-.col-xs-9:first-child,
-.col-sm-9:first-child,
-.col-md-9:first-child,
-.col-lg-9:first-child,
-.col-xs-10:first-child,
-.col-sm-10:first-child,
-.col-md-10:first-child,
-.col-lg-10:first-child,
-.col-xs-11:first-child,
-.col-sm-11:first-child,
-.col-md-11:first-child,
-.col-lg-11:first-child,
-.col-xs-12:first-child,
-.col-sm-12:first-child,
-.col-md-12:first-child,
-.col-lg-12:first-child {
-  padding-left: 15px;
-}
-.col-xs-1:last-child,
-.col-sm-1:last-child,
-.col-md-1:last-child,
-.col-lg-1:last-child,
-.col-xs-2:last-child,
-.col-sm-2:last-child,
-.col-md-2:last-child,
-.col-lg-2:last-child,
-.col-xs-3:last-child,
-.col-sm-3:last-child,
-.col-md-3:last-child,
-.col-lg-3:last-child,
-.col-xs-4:last-child,
-.col-sm-4:last-child,
-.col-md-4:last-child,
-.col-lg-4:last-child,
-.col-xs-5:last-child,
-.col-sm-5:last-child,
-.col-md-5:last-child,
-.col-lg-5:last-child,
-.col-xs-6:last-child,
-.col-sm-6:last-child,
-.col-md-6:last-child,
-.col-lg-6:last-child,
-.col-xs-7:last-child,
-.col-sm-7:last-child,
-.col-md-7:last-child,
-.col-lg-7:last-child,
-.col-xs-8:last-child,
-.col-sm-8:last-child,
-.col-md-8:last-child,
-.col-lg-8:last-child,
-.col-xs-9:last-child,
-.col-sm-9:last-child,
-.col-md-9:last-child,
-.col-lg-9:last-child,
-.col-xs-10:last-child,
-.col-sm-10:last-child,
-.col-md-10:last-child,
-.col-lg-10:last-child,
-.col-xs-11:last-child,
-.col-sm-11:last-child,
-.col-md-11:last-child,
-.col-lg-11:last-child,
-.col-xs-12:last-child,
-.col-sm-12:last-child,
-.col-md-12:last-child,
-.col-lg-12:last-child {
-  padding-right: 15px;
 }
 .np {
   padding: 0px !important;
