--- a/resources/cssLess/_overrides.less
+++ b/resources/cssLess/_overrides.less
@@ -1,12 +1,3 @@
-
-.form-horizontal .control-label.text-left { text-align: left; }
-
-.form-horizontal .control-label.text-center { text-align: center; }
-
-.form-horizontal .control-label.text-justify { text-align: justify; }
-
-.form-horizontal .control-label.text-right { text-align: right; }
-
 .media {
 	margin-top: 0;
 	&.bg-normal { background: @color-normal; }
@@ -17,6 +8,10 @@
 	&.bg-red { background: @color-red; }
 	&.bg-silver { background: @color-silver; }
 	&.bg-gold { background: @color-gold; }
+}
+
+.modal-dialog {
+	margin: 0px;
 }
 
 .padding-mix(~'n', ~'', 0px);
