--- a/resources/cssLess/styles.less
+++ b/resources/cssLess/styles.less
@@ -6,9 +6,11 @@ body {
 	color: #fff;
 	font-size: 12px;
 }
+
 main {
 	margin-top: 60px;
 }
+
 .navbar-form-no-border {
 	border: none;
 	margin-top: 0;
@@ -16,10 +18,12 @@ main {
 	-webkit-box-shadow: none;
 	box-shadow: none;
 }
+
 .tag-square {
 	width: 20px;
 	height: 20px;
 }
+
 .panel {
 	background: #333;
 	.table {
@@ -50,30 +54,37 @@ main {
 		}
 	}
 }
+
 .media-list .media {
 	background: #222;
 	padding: 5px;
 	border-bottom: 5px solid #111;
 }
+
 .modal-content {
 	background: #111;
 	border: 1px solid #fff;
 	border-radius: 0;
 }
+
 .modal-body {
 	padding: 5px 5px 0;
 }
+
 .modal-header, .modal-footer {
 	padding: 5px;
 }
+
 .btn {
 	border: none;
 	border-radius: 0;
 }
+
 option {
 	background: #000;
 	color: #fff;
 }
+
 .inputBox {
 	display: inline-block;
 	margin-bottom: 2px;
@@ -101,13 +112,13 @@ option {
 		}
 	}
 	> [list], > select {
-		 background: #555;
-		 -webkit-appearance: none;
-		 width: auto;
+		background: #555;
+		-webkit-appearance: none;
+		width: auto;
 		&::-webkit-calendar-picker-indicator {
 			display: none;
 		}
-	 }
+	}
 	.inputName {
 		background: #000;
 		color: #fff;
@@ -135,6 +146,8 @@ option {
 	> .GoalType { width: 20px; }
 	> .RewardType { width: 50px; }
 	> .MonsterType { width: 40px; }
+	> .MonsterRace { width: auto; }
+	> .MonsterFamily { width: 144px; }
 
 	> .starsText { width: 61px; }
 	> .statName, > .difficulty { width: 80px; }
@@ -183,6 +196,7 @@ option {
 }
 
 .duplicate {
+	outline: 2px #f00;
 	background: #f00 !important;
 }
 
