--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -40,30 +40,37 @@ main {
 .panel .table-responsive > .table-bordered tfoot tr:first-child th {
   border-bottom: 1px solid #dddddd;
 }
-.media-list .media {
-  background: #222;
-  padding: 5px;
-  border-bottom: 5px solid #111;
-}
-.modal-content {
-  background: #111;
-  border: 1px solid #fff;
-  border-radius: 0;
-}
-.modal-body {
-  padding: 5px 5px 0;
-}
-.modal-header,
-.modal-footer {
-  padding: 5px;
-}
-.btn {
-  border: none;
-  border-radius: 0;
-}
 option {
   background: #000;
   color: #fff;
+}
+option[value=Common] {
+  background: #1a1a1a;
+}
+option[value=Uncommon] {
+  background: #660066;
+}
+option[value=Rare],
+option[value=Blue] {
+  background: #004466;
+}
+option[value=Exotic] {
+  background: #006600;
+}
+option[value=Legendary] {
+  background: #666600;
+}
+option[value=Brown] {
+  background: #663300;
+}
+option[value=Red] {
+  background: #660000;
+}
+option[value=Silver] {
+  background: #666666;
+}
+option[value=Gold] {
+  background: #666600;
 }
 .inputBox {
   display: inline-block;
@@ -143,7 +150,7 @@ option {
   width: 170px;
 }
 .inputBox > .ItemRarity {
-  width: 52px;
+  width: 75px;
 }
 .inputBox > .ChestRarity {
   width: 46px;
@@ -158,10 +165,10 @@ option {
   width: 40px;
 }
 .inputBox > .MonsterRace {
-  width: auto;
+  width: 66px;
 }
 .inputBox > .MonsterFamily {
-  width: 144px;
+  width: 139px;
 }
 .inputBox > .starsText {
   width: 61px;
@@ -185,8 +192,8 @@ option {
 .inputBox > .goalAmount {
   width: 24px;
 }
-.inputBox > .monsterName {
-  width: 188px;
+.inputBox > .MonsterName {
+  width: 180px;
 }
 .inputBox.block {
   display: block;
@@ -206,17 +213,22 @@ option {
   padding: 2px;
   font-size: 10px;
 }
-.inputBox > *.bg-normal {
+.inputBox > *.bg-common {
   background: #1a1a1a;
 }
-.inputBox > *.bg-purple {
+.inputBox > *.bg-uncommon {
   background: #660066;
 }
-.inputBox > *.bg-blue {
+.inputBox > *.bg-blue,
+.inputBox > *.bg-rare {
   background: #004466;
 }
-.inputBox > *.bg-green {
+.inputBox > *.bg-exotix {
   background: #006600;
+}
+.inputBox > *.bg-gold,
+.inputBox > *.bg-legendary {
+  background: #666600;
 }
 .inputBox > *.bg-brown {
   background: #663300;
@@ -227,20 +239,29 @@ option {
 .inputBox > *.bg-silver {
   background: #666666;
 }
-.inputBox > *.bg-gold {
-  background: #666600;
-}
 .size-extra-wide .modal-dialog {
   width: 100%;
   padding: 0px;
 }
-.duplicate {
-  outline: 2px #f00;
-  background: #f00 !important;
+#loading {
+  z-index: 20000;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url('../images/loading.gif');
+  background-size: 100% 100%;
+  transition: opacity 2s;
+  display: block;
+  opacity: .95;
 }
 .media {
   position: relative;
+  padding: 5px;
   margin-top: 0;
+  margin-bottom: 5px;
+  background: #222;
 }
 .media .media-actions {
   opacity: .1;
@@ -252,17 +273,22 @@ option {
 .media:hover .media-actions {
   opacity: 1;
 }
-.media.bg-normal {
+.media.bg-common {
   background: #1a1a1a;
 }
-.media.bg-purple {
+.media.bg-uncommon {
   background: #660066;
 }
-.media.bg-blue {
+.media.bg-blue,
+.media.bg-rare {
   background: #004466;
 }
-.media.bg-green {
+.media.bg-exotix {
   background: #006600;
+}
+.media.bg-gold,
+.media.bg-legendary {
+  background: #666600;
 }
 .media.bg-brown {
   background: #663300;
@@ -273,11 +299,42 @@ option {
 .media.bg-silver {
   background: #666666;
 }
-.media.bg-gold {
-  background: #666600;
+.media.newModel {
+  box-shadow: inset 0 0 5px 2px #00aa00, 0 0 2px 1px #00aa00;
+}
+.media.cloneModel {
+  box-shadow: inset 0 0 5px 2px #00aaaa, 0 0 2px 1px #00aaaa;
+}
+.media.showModel {
+  box-shadow: inset 0 0 5px 2px transparent, 0 0 2px 1px transparent;
+}
+.media.duplicateModel {
+  box-shadow: inset 0 0 5px 2px #aa00aa, 0 0 2px 1px #aa00aa;
+}
+.media.duplicateFoundModel {
+  box-shadow: inset 0 0 5px 2px #0000aa, 0 0 2px 1px #0000aa;
+}
+.media.hasMissingData {
+  box-shadow: inset 0 0 5px 2px #aa0000, 0 0 2px 1px #aa0000;
+}
+.modal-body {
+  padding: 5px 5px 0;
 }
 .modal-dialog {
   margin: 5px auto 0;
+}
+.modal-header,
+.modal-footer {
+  padding: 5px;
+}
+.modal-content {
+  background: #111;
+  border: 1px solid #fff;
+  border-radius: 0;
+}
+.btn {
+  border: none;
+  border-radius: 0;
 }
 input[type="radio"],
 input[type="checkbox"] {
