--- a/resources/cssLess/_overrides.less
+++ b/resources/cssLess/_overrides.less
@@ -1,6 +1,9 @@
 .media {
 	position: relative;
+	padding: 5px;
 	margin-top: 0;
+	margin-bottom: 5px;
+	background: #222;
 
 	.media-actions {
 		opacity: .1;
@@ -12,19 +15,39 @@
 	&:hover .media-actions {
 		opacity: 1;
 	}
+	.bgs-mixin();
 
-	&.bg-normal { background: @color-normal; }
-	&.bg-purple { background: @color-purple; }
-	&.bg-blue { background: @color-blue; }
-	&.bg-green { background: @color-green; }
-	&.bg-brown { background: @color-brown; }
-	&.bg-red { background: @color-red; }
-	&.bg-silver { background: @color-silver; }
-	&.bg-gold { background: @color-gold; }
+	.mediaGlow(@color: transparent) { box-shadow: inset 0 0 5px 2px @color, 0 0 2px 1px @color; }
+	@glow: inset 0 0 5px 2px;
+	&.newModel   { .mediaGlow(#0a0); }
+	&.cloneModel { .mediaGlow(#0aa); }
+	&.showModel  { .mediaGlow(); }
+	&.duplicateModel  { .mediaGlow(#a0a); }
+	&.duplicateFoundModel  { .mediaGlow(#00a); }
+	&.hasMissingData   { .mediaGlow(#a00); }
+}
+
+.modal-body {
+	padding: 5px 5px 0;
 }
 
 .modal-dialog {
 	margin: 5px auto 0;
+}
+
+.modal-header, .modal-footer {
+	padding: 5px;
+}
+
+.modal-content {
+	background: #111;
+	border: 1px solid #fff;
+	border-radius: 0;
+}
+
+.btn {
+	border: none;
+	border-radius: 0;
 }
 
 input[type="radio"], input[type="checkbox"] {
