--- a/resources/cssLess/_mixins.less
+++ b/resources/cssLess/_mixins.less
@@ -12,7 +12,7 @@
 	&.bg-common { background: @color-normal; }
 	&.bg-uncommon { background: @color-purple; }
 	&.bg-blue, &.bg-rare { background: @color-blue; }
-	&.bg-exotix { background: @color-green; }
+	&.bg-exotic { background: @color-green; }
 	&.bg-gold, &.bg-legendary { background: @color-gold; }
 	&.bg-brown { background: @color-brown; }
 	&.bg-red { background: @color-red; }
