--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -91,6 +91,7 @@ option[value=Gold] {
 .inputBox > * + * {
   border-left-width: 0;
 }
+.inputBox header,
 .inputBox span,
 .inputBox select,
 .inputBox input,
@@ -125,10 +126,10 @@ option[value=Gold] {
   background: #FFF;
   color: #000;
 }
-.inputBox.hasTitle {
+.inputBox.hasHeader {
   padding-top: 1.1em;
 }
-.inputBox.hasTitle > .inputTitle:first-child {
+.inputBox.hasHeader > header:first-child {
   background: #000;
   color: #FFF;
   position: absolute;
@@ -138,11 +139,11 @@ option[value=Gold] {
   padding-bottom: 3px;
   border-color: #fff !important;
 }
-.inputBox.hasTitle > .inputTitle:first-child[readonly] {
+.inputBox.hasHeader > header:first-child[readonly] {
   background: #FFF;
   color: #000;
 }
-.inputBox.hasTitle > .inputTitle:first-child + * {
+.inputBox.hasHeader > header:first-child + * {
   border-left-width: 1px;
 }
 .inputBox .inputBtn {
@@ -213,6 +214,9 @@ option[value=Gold] {
 .inputBox > .MonsterName {
   width: 180px;
 }
+.inputBox > .BlacksmithStat {
+  width: 80px;
+}
 .inputBox > .starsText {
   width: 61px;
 }
@@ -262,6 +266,12 @@ option[value=Gold] {
 }
 .inputBox[data-goal-type=Protect] > * {
   border-color: #0FF;
+}
+.inputBox > .bs-yellow {
+  background: #666600;
+}
+.inputBox > .bs-red {
+  background: #660000;
 }
 .inputBox.block {
   display: block;
@@ -327,6 +337,40 @@ option[value=Gold] {
   transition: opacity 2s;
   display: block;
   opacity: .95;
+}
+.blacksmithStatsContainer {
+  position: relative;
+  width: 310px;
+  height: 208px;
+  padding-top: 23px;
+}
+.blacksmithStatsContainer .blacksmithChartContainer {
+  width: 350px;
+  height: 175px;
+  margin-left: -20px;
+}
+.blacksmithStatsContainer > .inputBox {
+  position: absolute;
+}
+.blacksmithStatsContainer > .inputBox[name="Precision"] {
+  top: 0;
+  left: 115px;
+}
+.blacksmithStatsContainer > .inputBox[name="Technique"] {
+  top: 70px;
+  right: 0;
+}
+.blacksmithStatsContainer > .inputBox[name="Growth Potential"] {
+  bottom: 0;
+  right: 50px;
+}
+.blacksmithStatsContainer > .inputBox[name="Knowledge"] {
+  bottom: 0;
+  left: 50px;
+}
+.blacksmithStatsContainer > .inputBox[name="Recycling"] {
+  top: 70px;
+  left: 0;
 }
 .media {
   position: relative;
@@ -401,7 +445,7 @@ option[value=Gold] {
 }
 .modal-content {
   background: #111;
-  border: 1px solid #fff;
+  border: 1px solid #FFF;
   border-radius: 0;
 }
 .btn {
