--- a/resources/cssLess/_overrides.less
+++ b/resources/cssLess/_overrides.less
@@ -19,12 +19,12 @@
 
 	.mediaGlow(@color: transparent) { box-shadow: inset 0 0 5px 2px @color, 0 0 2px 1px @color; }
 	@glow: inset 0 0 5px 2px;
-	&.newModel   { .mediaGlow(#0a0); }
-	&.cloneModel { .mediaGlow(#0aa); }
-	&.showModel  { .mediaGlow(); }
-	&.duplicateModel  { .mediaGlow(#a0a); }
-	&.duplicateFoundModel  { .mediaGlow(#00a); }
-	&.hasMissingData   { .mediaGlow(#a00); }
+	&.newModel { .mediaGlow(#0A0); }
+	&.cloneModel { .mediaGlow(#0AA); }
+	&.showModel { .mediaGlow(); }
+	&.duplicateModel { .mediaGlow(#A0A); }
+	&.duplicateFoundModel { .mediaGlow(#00A); }
+	&.hasMissingData { .mediaGlow(#A00); }
 }
 
 .modal-body {
@@ -41,7 +41,7 @@
 
 .modal-content {
 	background: #111;
-	border: 1px solid #fff;
+	border: 1px solid #FFF;
 	border-radius: 0;
 }
 
@@ -51,7 +51,7 @@
 }
 
 input[type="radio"], input[type="checkbox"] {
-	 margin: 0;
+	margin: 0;
 }
 
 .padding-mix(~'n', ~'', 0px);
